v4/platform/activemq/cf-activemq.yaml
AWSTemplateFormatVersion: 2010-09-09
## VPC-id, Subnets ID, ClusterSharedNodeSecurityGroup name, Cluser Control Plane name and Control Plane SecurityGroup name to be updated as per requirements.
Description: ActiveMQ Setup CF Template - V4

Parameters:
  AppShortName:
    Type: String
    Description: AppShortName

  EnvName:
    Type: String
    Description: Environment
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-sit1
      - nprd-sit2
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - prod
      - prod-a
      - prod-b

  VpcId:
    Type: String
    Description: VpcId of your existing Virtual Private Cloud (VPC)

  VPCSubnetCidrAppAZ1:
    Type: String
    Description: VPC Subnet for App AZ1

  VPCSubnetCidrAppAZ2:
    Type: String
    Description: VPC Subnet for App AZ2

  VPCSubnetCidrAppAZ3:
    Type: String
    Description: VPC Subnet for App AZ3

  VPCSubnetIdappAZ1:
    Type: String
    Description: VPC Subnet id for App AZ1

  VPCSubnetIdappAZ2:
    Type: String
    Description: VPC Subnet id for App AZ2

  DeploymentServer01:
    Type: String
    Description: Deployment Server IP
  
  InstanceType:
    Type: String
    Description: InstanceType
  
  MQPassword:
    Type: String
    Description: Password for ActiveMQ
    NoEcho: true

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"]]
  HasSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, ""]]

Resources:
# Active MQ
## ActiveMQ SecurityGroup
  ActiveMQSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for ActiveMQ
      GroupName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      Tags: 
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If
          - HasSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 61617
            ToPort: 61617
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 8162
          ToPort: 8162
          CidrIp: !Ref DeploymentServer01
          Description: Deployment server 01

  BasicBroker:
    Type: 'AWS::AmazonMQ::Broker'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AutoMinorVersionUpgrade: true
      BrokerName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      DeploymentMode: ACTIVE_STANDBY_MULTI_AZ
      EngineType: ACTIVEMQ
      EngineVersion: 5.18
      HostInstanceType: !Ref InstanceType
      Logs:
        General: true
        Audit: true
      PubliclyAccessible: false
      SecurityGroups:
        - !GetAtt ActiveMQSecurityGroup.GroupId
      SubnetIds:
        - !Ref VPCSubnetIdappAZ1
        - !Ref VPCSubnetIdappAZ2
      Users:
        - Password: !Ref MQPassword
          Username: !Sub ${AppShortName}-${EnvName}-activemq-client
          ConsoleAccess: false
